--- a/src/1/determine_the_top_n_items_occurring_in_a_list/example.ipynb
+++ b/src/1/determine_the_top_n_items_occurring_in_a_list/example.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled0.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP4GYyi+29ZQkN/hzYZ2G34",
+      "authorship_tag": "ABX9TyO0tviUJkC5TjkI3I8G7QBY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,7 +47,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "pAnz_hds57_8",
-        "outputId": "6a881daf-1321-4576-9d37-c7ef10b57b96",
+        "outputId": "cba00917-444a-44a2-8d7f-8bd6a1195ddc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -66,7 +66,7 @@
         "top_three = word_counts.most_common(3)\n",
         "print(top_three)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -86,6 +86,32 @@
         "# outputs [('eyes', 8), ('the', 5), ('look', 4)]\n",
         "\n",
         "# Example of merging in more words\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iKsp19ge7w-h",
+        "outputId": "80156cf5-f38b-456e-9ce8-e13c06f8272f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "morewords = ['why','are','you','not','looking','in','my','eyes']\n",
+        "word_counts.update(morewords)\n",
+        "print(word_counts.most_common(3))"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[('eyes', 9), ('the', 5), ('look', 4)]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
